chore(tsconfig): Correct JSON Schema warnings
Signed-off-by: Gordon Smith <gordonjsmith@gmail.com>

--- a/examples/example-datastore/tsconfig.json
+++ b/examples/example-datastore/tsconfig.json
@@ -7,10 +7,17 @@
     "strictNullChecks": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "ES5",
+    "target": "es5",
     "outDir": "./build",
-    "lib": ["ES5", "es2015.collection", "DOM", "ES2015.Promise"],
+    "lib": [
+      "es5",
+      "es2015.collection",
+      "es2015.promise",
+      "dom"
+    ],
     "types": []
   },
-  "include": ["src/*"]
+  "include": [
+    "src/*"
+  ]
 }
