--- a/packages/collections/tsconfig.json
+++ b/packages/collections/tsconfig.json
@@ -8,10 +8,10 @@
     "strictNullChecks": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "ES5",
+    "target": "es5",
     "outDir": "lib",
     "lib": [
-      "ES5"
+      "es5"
     ],
     "types": [],
     "rootDir": "src"
