--- a/packages/coreutils/tsconfig.json
+++ b/packages/coreutils/tsconfig.json
@@ -8,11 +8,12 @@
     "strictNullChecks": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "ES5",
+    "target": "es5",
     "outDir": "lib",
     "lib": [
-      "ES5",
-      "ES2015.Promise"
+      "es5",
+      "es2015.promise",
+      "es2015.iterable"
     ],
     "types": [],
     "rootDir": "src"
