--- a/examples/example-dockpanel/tsconfig.json
+++ b/examples/example-dockpanel/tsconfig.json
@@ -7,10 +7,17 @@
     "strictNullChecks": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "ES5",
+    "target": "es5",
     "outDir": "./build",
-    "lib": ["ES5", "ES2015.Promise", "DOM"],
+    "lib": [
+      "es5",
+      "es2015.promise",
+      "es2015.iterable",
+      "dom"
+    ],
     "types": []
   },
-  "include": ["src/*"]
+  "include": [
+    "src/*"
+  ]
 }
