--- a/packages/commands/tsconfig.json
+++ b/packages/commands/tsconfig.json
@@ -8,12 +8,13 @@
     "strictNullChecks": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "ES5",
+    "target": "es5",
     "outDir": "lib",
     "lib": [
-      "ES5",
-      "ES2015.Promise",
-      "DOM"
+      "es5",
+      "es2015.promise",
+      "es2015.iterable",
+      "dom"
     ],
     "types": [],
     "rootDir": "src"
