--- a/packages/datastore/tsconfig.json
+++ b/packages/datastore/tsconfig.json
@@ -8,10 +8,13 @@
     "strictNullChecks": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "ES5",
+    "target": "es5",
     "outDir": "lib",
     "rootDir": "src",
-    "lib": ["dom", "es6"],
+    "lib": [
+      "dom",
+      "es6"
+    ],
     "types": []
   },
   "include": [
