--- a/packages/disposable/tsconfig.json
+++ b/packages/disposable/tsconfig.json
@@ -8,12 +8,12 @@
     "strictNullChecks": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "ES5",
+    "target": "es5",
     "rootDir": "src",
     "outDir": "lib",
     "lib": [
-      "ES5",
-      "ES2015.Collection"
+      "es5",
+      "es2015.collection"
     ],
     "types": []
   },
