--- a/packages/signaling/tsconfig.json
+++ b/packages/signaling/tsconfig.json
@@ -8,12 +8,12 @@
     "strictNullChecks": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "ES5",
+    "target": "es5",
     "outDir": "lib",
     "lib": [
-      "ES5",
-      "ES2015.Collection",
-      "DOM"
+      "es5",
+      "es2015.collection",
+      "dom"
     ],
     "types": [],
     "rootDir": "src"
