--- a/packages/polling/tsconfig.json
+++ b/packages/polling/tsconfig.json
@@ -15,7 +15,9 @@
       "ES5",
       "ES2015.Promise"
     ],
-    "types": [],
+    "types": [
+      "@types/node"
+    ],
     "rootDir": "src"
   },
   "include": [
