--- a/examples/example-datagrid/tsconfig.json
+++ b/examples/example-datagrid/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "target": "ES5",
     "outDir": "./build",
-    "lib": ["ES5", "ES2015.Promise", "DOM"],
+    "lib": ["ES5", "ES2015.Promise", "ES2015.Iterable", "DOM"],
     "types": []
   },
   "include": ["src/*"]
