--- a/examples/example-datastore/tsconfig.json
+++ b/examples/example-datastore/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "target": "ES5",
     "outDir": "./build",
-    "lib": ["ES5", "es2015.collection", "DOM", "ES2015.Promise"],
+    "lib": ["ES5", "es2015.collection", "DOM", "ES2015.Promise","ES2015.Iterable"],
     "types": []
   },
   "include": ["src/*"]
