--- a/packages/coreutils/tsconfig.json
+++ b/packages/coreutils/tsconfig.json
@@ -12,7 +12,8 @@
     "outDir": "lib",
     "lib": [
       "ES5",
-      "ES2015.Promise"
+      "ES2015.Promise",
+      "ES2015.Iterable"
     ],
     "types": [],
     "rootDir": "src"
