--- a/packages/datastore/package.json
+++ b/packages/datastore/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "api": "api-extractor run --local --verbose",
     "build": "tsc --build",
-    "clean": "rimraf lib",
+    "clean": "rimraf lib && rimraf *.tsbuildinfo",
     "docs": "typedoc --options tdoptions.json src",
     "test": "npm run test:firefox",
     "test:chrome": "cd tests && karma start --browsers=Chrome",
@@ -51,7 +51,7 @@
   "devDependencies": {
     "rimraf": "^2.5.2",
     "typedoc": "~0.15.0",
-    "typescript": "~3.5.1"
+    "typescript": "~3.6.4"
   },
   "publishConfig": {
     "access": "public"
