--- a/packages/disposable/tsconfig.json
+++ b/packages/disposable/tsconfig.json
@@ -13,7 +13,8 @@
     "outDir": "lib",
     "lib": [
       "ES5",
-      "ES2015.Collection"
+      "ES2015.Collection",
+      "ES2015.Iterable"
     ],
     "types": []
   },
