--- a/packages/dragdrop/package.json
+++ b/packages/dragdrop/package.json
@@ -33,7 +33,7 @@
     "api": "api-extractor run --local --verbose",
     "build": "tsc --build",
     "build:test": "tsc --build tests && cd tests && webpack",
-    "clean": "rimraf lib",
+    "clean": "rimraf lib && rimraf *.tsbuildinfo",
     "clean:test": "rimraf tests/build",
     "docs": "typedoc --options tdoptions.json src",
     "test": "npm run test:firefox",
@@ -63,8 +63,8 @@
     "rimraf": "^2.5.2",
     "simulate-event": "^1.4.0",
     "style-loader": "^0.13.1",
-    "typedoc": "~0.12.0",
-    "typescript": "~3.0.3",
+    "typedoc": "~0.15.0",
+    "typescript": "~3.6.4",
     "webpack": "^2.2.1"
   },
   "publishConfig": {
