--- a/packages/messaging/package.json
+++ b/packages/messaging/package.json
@@ -31,7 +31,7 @@
     "api": "api-extractor run --local --verbose",
     "build": "tsc --build",
     "build:test": "tsc --build tests && cd tests && webpack",
-    "clean": "rimraf lib",
+    "clean": "rimraf lib && rimraf *.tsbuildinfo",
     "clean:test": "rimraf tests/build",
     "docs": "typedoc --options tdoptions.json src",
     "test": "npm run test:firefox",
@@ -48,6 +48,7 @@
     "@microsoft/api-extractor": "^7.6.0",
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
+    "@types/node": "^12.12.17",
     "chai": "^3.5.0",
     "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -57,8 +58,8 @@
     "karma-mocha-reporter": "^2.2.2",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.2",
-    "typedoc": "~0.12.0",
-    "typescript": "~3.0.3",
+    "typedoc": "~0.15.0",
+    "typescript": "~3.6.4",
     "webpack": "^2.2.1"
   },
   "publishConfig": {
