--- a/packages/properties/tsconfig.json
+++ b/packages/properties/tsconfig.json
@@ -12,7 +12,8 @@
     "outDir": "lib",
     "lib": [
       "ES5",
-      "ES2015.Collection"
+      "ES2015.Collection",
+      "ES2015.Iterable"
     ],
     "types": [],
     "rootDir": "src"
