--- a/packages/widgets/tsconfig.json
+++ b/packages/widgets/tsconfig.json
@@ -14,6 +14,7 @@
       "ES5",
       "ES2015.Collection",
       "ES2015.Promise",
+      "ES2015.Iterable",
       "DOM"
     ],
     "types": [],
