--- a/examples/example-datastore/package.json
+++ b/examples/example-datastore/package.json
@@ -3,8 +3,11 @@
   "name": "@lumino/example-datastore",
   "version": "0.2.1",
   "dependencies": {
+    "@lumino/algorithm": "^1.2.1",
+    "@lumino/commands": "^1.8.0",
     "@lumino/coreutils": "^1.4.0",
     "@lumino/datastore": "^0.8.1",
+    "@lumino/dragdrop": "^1.4.2",
     "@lumino/disposable": "^1.3.2",
     "@lumino/widgets": "^1.9.4",
     "codemirror": "^5.48.2",
