--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -39,6 +39,7 @@
     "@lumino/disposable": "^1.3.2",
     "@lumino/domutils": "^1.1.5",
     "@lumino/dragdrop": "^1.4.2",
+    "@lumino/keyboard": "^1.1.4",
     "@lumino/messaging": "^1.3.1",
     "@lumino/signaling": "^1.3.2",
     "@lumino/widgets": "^1.9.4"
