--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -46,5 +46,8 @@
     "rimraf": "^2.5.2",
     "typedoc": "~0.12.0",
     "typescript": "~3.0.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
