--- a/packages/dragdrop/package.json
+++ b/packages/dragdrop/package.json
@@ -64,5 +64,8 @@
     "typedoc": "~0.12.0",
     "typescript": "~3.0.3",
     "webpack": "^2.2.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
