--- a/packages/messaging/package.json
+++ b/packages/messaging/package.json
@@ -58,5 +58,8 @@
     "typedoc": "~0.12.0",
     "typescript": "~3.0.3",
     "webpack": "^2.2.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
