--- a/packages/messaging/package.json
+++ b/packages/messaging/package.json
@@ -28,6 +28,7 @@
     "url": "https://github.com/luminojs/lumino.git"
   },
   "scripts": {
+    "api": "api-extractor run --local --verbose",
     "build": "tsc --build",
     "build:test": "tsc --build tests && cd tests && webpack",
     "clean": "rimraf lib",
@@ -44,6 +45,7 @@
     "@lumino/collections": "^1.2.0"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.6.0",
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
     "chai": "^3.5.0",
