--- a/packages/dragdrop/package.json
+++ b/packages/dragdrop/package.json
@@ -30,6 +30,7 @@
     "url": "https://github.com/luminojs/lumino.git"
   },
   "scripts": {
+    "api": "api-extractor run --local --verbose",
     "build": "tsc --build",
     "build:test": "tsc --build tests && cd tests && webpack",
     "clean": "rimraf lib",
@@ -46,6 +47,7 @@
     "@lumino/disposable": "^1.3.1"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.6.0",
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
     "chai": "^3.5.0",
