--- a/packages/collections/package.json
+++ b/packages/collections/package.json
@@ -2,9 +2,9 @@
   "name": "@lumino/collections",
   "version": "1.2.0",
   "description": "lumino Generic Collections",
-  "homepage": "https://github.com/luminojs/lumino",
+  "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
-    "url": "https://github.com/luminojs/lumino/issues"
+    "url": "https://github.com/jupyterlab/lumino/issues"
   },
   "license": "BSD-3-Clause",
   "author": "S. Chris Colbert <sccolbert@gmail.com>",
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/luminojs/lumino.git"
+    "url": "https://github.com/jupyterlab/lumino.git"
   },
   "scripts": {
     "api": "api-extractor run --local --verbose",
