--- a/packages/datastore/package.json
+++ b/packages/datastore/package.json
@@ -2,9 +2,9 @@
   "name": "@lumino/datastore",
   "version": "0.8.0",
   "description": "lumino DataStore",
-  "homepage": "https://github.com/luminojs/lumino",
+  "homepage": "https://github.com/jupyterlabab/lumino",
   "bugs": {
-    "url": "https://github.com/luminojs/lumino/issues"
+    "url": "https://github.com/jupyterlabab/lumino/issues"
   },
   "license": "BSD-3-Clause",
   "author": "S. Chris Colbert <sccolbert@gmail.com>",
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/luminojs/lumino.git"
+    "url": "https://github.com/jupyterlabab/lumino.git"
   },
   "scripts": {
     "api": "api-extractor run --local --verbose",
