--- a/packages/collections/package.json
+++ b/packages/collections/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lumino/collections",
   "version": "1.2.0",
-  "description": "lumino Generic Collections",
+  "description": "Lumino Generic Collections",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
     "url": "https://github.com/jupyterlab/lumino/issues"
