--- a/packages/commands/package.json
+++ b/packages/commands/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lumino/commands",
   "version": "1.7.2",
-  "description": "lumino Commands",
+  "description": "Lumino Commands",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
     "url": "https://github.com/jupyterlab/lumino/issues"
