--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lumino/coreutils",
   "version": "1.3.1",
-  "description": "lumino Core Utilities",
+  "description": "Lumino Core Utilities",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
     "url": "https://github.com/jupyterlab/lumino/issues"
