--- a/packages/disposable/package.json
+++ b/packages/disposable/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lumino/disposable",
   "version": "1.3.1",
-  "description": "lumino Disposable",
+  "description": "Lumino Disposable",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
     "url": "https://github.com/jupyterlab/lumino/issues"
