--- a/packages/keyboard/package.json
+++ b/packages/keyboard/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lumino/keyboard",
   "version": "1.1.3",
-  "description": "lumino Keyboard",
+  "description": "Lumino Keyboard",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
     "url": "https://github.com/jupyterlab/lumino/issues"
