--- a/packages/properties/package.json
+++ b/packages/properties/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lumino/properties",
   "version": "1.1.3",
-  "description": "lumino Attached Properties",
+  "description": "Lumino Attached Properties",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
     "url": "https://github.com/jupyterlab/lumino/issues"
