--- a/packages/signaling/package.json
+++ b/packages/signaling/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lumino/signaling",
   "version": "1.3.1",
-  "description": "lumino Signals and Slots",
+  "description": "Lumino Signals and Slots",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
     "url": "https://github.com/jupyterlab/lumino/issues"
