--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/application",
-  "version": "1.7.3",
+  "version": "1.7.4",
   "description": "Lumino Pluggable Application",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -40,9 +40,9 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/commands": "^1.7.2",
-    "@lumino/coreutils": "^1.3.1",
-    "@lumino/widgets": "^1.9.3"
+    "@lumino/commands": "^1.8.0",
+    "@lumino/coreutils": "^1.4.0",
+    "@lumino/widgets": "^1.9.4"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
@@ -60,7 +60,8 @@
     "typedoc": "~0.12.0",
     "typescript": "~3.0.3",
     "webpack": "^2.2.1"
-  }, "publishConfig": {
+  },
+  "publishConfig": {
     "access": "public"
   }
 }
