--- a/packages/dragdrop/package.json
+++ b/packages/dragdrop/package.json
@@ -6,6 +6,10 @@
   "bugs": {
     "url": "https://github.com/jupyterlab/lumino/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jupyterlab/lumino.git"
+  },
   "license": "BSD-3-Clause",
   "author": "S. Chris Colbert <sccolbert@gmail.com>",
   "contributors": [
@@ -20,14 +24,10 @@
     "style/*.css"
   ],
   "main": "lib/index.js",
-  "style": "style/index.css",
   "types": "lib/index.d.ts",
+  "style": "style/index.css",
   "directories": {
     "lib": "lib/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jupyterlab/lumino.git"
   },
   "scripts": {
     "api": "api-extractor run --local --verbose",
@@ -51,15 +51,15 @@
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
     "chai": "^3.5.0",
-    "css-loader": "^0.26.1",
+    "css-loader": "3.4.0",
     "es6-promise": "^4.0.5",
-    "karma": "^1.5.0",
+    "karma": "4.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
-    "mocha": "^3.2.0",
+    "mocha": "6.2.2",
     "rimraf": "^2.5.2",
     "simulate-event": "^1.4.0",
     "style-loader": "^0.13.1",
