--- a/packages/polling/package.json
+++ b/packages/polling/package.json
@@ -6,6 +6,10 @@
   "bugs": {
     "url": "https://github.com/jupyterlab/lumino/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/luminojs/lumino.git"
+  },
   "license": "BSD-3-Clause",
   "author": "A. T. Darian <git@darian.af>",
   "contributors": [
@@ -22,10 +26,6 @@
   "types": "lib/index.d.ts",
   "directories": {
     "lib": "lib/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/luminojs/lumino.git"
   },
   "scripts": {
     "api": "api-extractor run --local --verbose",
@@ -51,13 +51,13 @@
     "@types/mocha": "^2.2.39",
     "@types/node": "^12.12.17",
     "chai": "^3.5.0",
-    "karma": "^1.5.0",
+    "karma": "4.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
-    "mocha": "^3.2.0",
+    "mocha": "6.2.2",
     "rimraf": "^2.5.2",
     "typedoc": "~0.12.0",
     "typescript": "~3.6.4",
