--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -6,6 +6,10 @@
   "bugs": {
     "url": "https://github.com/jupyterlab/lumino/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jupyterlab/lumino.git"
+  },
   "license": "BSD-3-Clause",
   "author": "S. Chris Colbert <sccolbert@gmail.com>",
   "contributors": [
@@ -25,10 +29,6 @@
   "directories": {
     "lib": "lib/"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jupyterlab/lumino.git"
-  },
   "scripts": {
     "api": "api-extractor run --local --verbose",
     "build": "tsc --build",
@@ -37,13 +37,13 @@
     "clean:test": "rimraf tests/build",
     "docs": "typedoc --options tdoptions.json src",
     "test": "npm run test:firefox",
-    "test:debug": "npm run test:debug:firefox",
     "test:chrome": "cd tests && karma start --browsers=Chrome",
     "test:chrome-headless": "cd tests && karma start --browsers=ChromeHeadless",
-    "test:firefox": "cd tests && karma start --browsers=Firefox",
+    "test:debug": "npm run test:debug:firefox",
     "test:debug:chrome": "cd tests && karma start --browsers=Chrome --singleRun=false --debug=true --browserNoActivityTimeout=10000000 --browserDisconnectTimeout=10000000",
     "test:debug:chrome-headless": "cd tests && karma start  --browsers=ChromeHeadless --singleRun=false --debug=true --browserNoActivityTimeout=10000000 --browserDisconnectTimeout=10000000",
     "test:debug:firefox": "cd tests && karma start --browsers=Firefox --singleRun=false --debug=true --browserNoActivityTimeout=10000000 --browserDisconnectTimeout=10000000",
+    "test:firefox": "cd tests && karma start --browsers=Firefox",
     "test:ie": "cd tests && karma start --browsers=IE",
     "watch": "tsc --build --watch"
   },
@@ -65,15 +65,15 @@
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
     "chai": "^3.5.0",
-    "css-loader": "^0.26.1",
+    "css-loader": "3.4.0",
     "es6-promise": "^4.0.5",
-    "karma": "^1.5.0",
+    "karma": "4.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
-    "mocha": "^3.2.0",
+    "mocha": "6.2.2",
     "rimraf": "^2.5.2",
     "simulate-event": "^1.4.0",
     "style-loader": "^0.13.1",
