--- a/packages/messaging/package.json
+++ b/packages/messaging/package.json
@@ -50,13 +50,13 @@
     "@types/mocha": "^2.2.39",
     "@types/node": "^12.12.17",
     "chai": "^3.5.0",
-    "karma": "4.4.1",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
-    "mocha": "6.2.2",
+    "mocha": "^6.2.2",
     "rimraf": "^2.5.2",
     "typedoc": "~0.15.0",
     "typescript": "~3.6.4",
