--- a/packages/commands/package.json
+++ b/packages/commands/package.json
@@ -54,13 +54,13 @@
     "@types/mocha": "^2.2.39",
     "chai": "^3.5.0",
     "es6-promise": "^4.0.5",
-    "karma": "4.4.1",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
-    "mocha": "6.2.2",
+    "mocha": "^6.2.2",
     "rimraf": "^2.5.2",
     "simulate-event": "^1.4.0",
     "typedoc": "~0.15.0",
