--- a/examples/example-datagrid/package.json
+++ b/examples/example-datagrid/package.json
@@ -19,6 +19,7 @@
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
     "typescript": "~3.6.4",
-    "webpack": "^2.2.1"
+    "webpack": "^4.41.3",
+    "webpack-cli": "^3.3.10"
   }
 }
