--- a/packages/datastore/package.json
+++ b/packages/datastore/package.json
@@ -51,7 +51,8 @@
   "devDependencies": {
     "rimraf": "^2.5.2",
     "typedoc": "~0.15.0",
-    "typescript": "~3.6.4"
+    "typescript": "~3.6.4",
+    "webpack-cli": "^3.3.10"
   },
   "publishConfig": {
     "access": "public"
