--- a/packages/dragdrop/package.json
+++ b/packages/dragdrop/package.json
@@ -65,7 +65,8 @@
     "style-loader": "^0.13.1",
     "typedoc": "~0.15.0",
     "typescript": "~3.6.4",
-    "webpack": "^2.2.1"
+    "webpack": "^4.41.3",
+    "webpack-cli": "^3.3.10"
   },
   "publishConfig": {
     "access": "public"
