--- a/packages/keyboard/package.json
+++ b/packages/keyboard/package.json
@@ -56,7 +56,8 @@
     "simulate-event": "^1.4.0",
     "typedoc": "~0.15.0",
     "typescript": "~3.6.4",
-    "webpack": "^2.2.1"
+    "webpack": "^4.41.3",
+    "webpack-cli": "^3.3.10"
   },
   "publishConfig": {
     "access": "public"
