--- a/packages/datastore/package.json
+++ b/packages/datastore/package.json
@@ -16,22 +16,23 @@
     "Ian Rose <ian.r.rose@gmail.com>"
   ],
   "files": [
-    "lib/*.d.ts",
-    "lib/*.js"
+    "dist/*",
+    "types/*"
   ],
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "directories": {
-    "lib": "lib/"
-  },
+  "main": "dist/index.js",
+  "module": "dist/index.es6",
+  "unpkg": "dist/index.min.js",
+  "jsdelivr": "dist/index.min.js",
+  "types": "types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/jupyterlabab/lumino.git"
   },
   "scripts": {
     "api": "api-extractor run --local --verbose",
-    "build": "tsc --build",
-    "clean": "rimraf lib && rimraf *.tsbuildinfo",
+    "minimize": "terser dist/index.js -c -m --source-map \"content='dist/index.js.map',url='index.min.js.map'\" -o dist/index.min.js",
+    "build": "tsc --build && rollup -c",
+    "clean": "rimraf ./lib && rimraf *.tsbuildinfo && rimraf ./types && rimraf ./dist",
     "docs": "typedoc --options tdoptions.json src",
     "test": "npm run test:firefox",
     "test:chrome": "cd tests && karma start --browsers=Chrome",
@@ -49,7 +50,14 @@
     "@lumino/signaling": "^1.3.4"
   },
   "devDependencies": {
+    "tslib": "1.10.0",
     "rimraf": "^2.5.2",
+    "rollup": "^1.29.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-sourcemaps": "^0.5.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "terser": "^4.6.2",
     "typedoc": "~0.15.0",
     "typescript": "~3.6.4",
     "webpack-cli": "^3.3.10"
