--- a/packages/default-theme/package.json
+++ b/packages/default-theme/package.json
@@ -15,6 +15,8 @@
     "Steven Silvester <steven.silvester@gmail.com>"
   ],
   "files": [
+    "dist/*",
+    "types/*",
     "images/*.png",
     "style/*.css"
   ],
