--- a/packages/disposable/tsconfig.json
+++ b/packages/disposable/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "composite": true,
     "declaration": true,
+    "declarationDir": "./types",
     "noImplicitAny": true,
     "noEmitOnError": true,
     "noUnusedLocals": true,
@@ -16,6 +17,7 @@
       "ES2015.Collection",
       "ES2015.Iterable"
     ],
+    "importHelpers": true,
     "types": []
   },
   "include": [
