--- a/packages/disposable/tsconfig.json
+++ b/packages/disposable/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "composite": true,
     "declaration": true,
+    "declarationDir": "./types",
     "noImplicitAny": true,
     "noEmitOnError": true,
     "noUnusedLocals": true,
     "strictNullChecks": true,
-    "module": "commonjs",
+    "module": "ES6",
     "moduleResolution": "node",
     "target": "ES5",
     "rootDir": "src",
@@ -16,6 +17,7 @@
       "ES2015.Collection",
       "ES2015.Iterable"
     ],
+    "importHelpers": true,
     "types": []
   },
   "include": [
