--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -14,22 +14,23 @@
     "Steven Silvester <steven.silvester@gmail.com>"
   ],
   "files": [
-    "lib/*.d.ts",
-    "lib/*.js"
+    "dist/*",
+    "types/*"
   ],
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "directories": {
-    "lib": "lib/"
-  },
+  "main": "dist/index.js",
+  "module": "dist/index.es6",
+  "unpkg": "dist/index.min.js",
+  "jsdelivr": "dist/index.min.js",
+  "types": "types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/jupyterlab/lumino.git"
   },
   "scripts": {
     "api": "api-extractor run --local --verbose",
-    "build": "tsc --build",
-    "clean": "rimraf lib && rimraf *.tsbuildinfo",
+    "minimize": "terser dist/index.js -c -m --source-map \"content='dist/index.js.map',url='index.min.js.map'\" -o dist/index.min.js",
+    "build": "tsc --build && rollup -c",
+    "clean": "rimraf ./lib && rimraf *.tsbuildinfo && rimraf ./types && rimraf ./dist",
     "docs": "typedoc --options tdoptions.json src",
     "watch": "tsc --build --watch"
   },
@@ -45,8 +46,14 @@
     "@lumino/widgets": "^1.12.2"
   },
   "devDependencies": {
+    "tslib": "1.10.0",
     "rimraf": "^2.5.2",
     "typedoc": "~0.15.0",
+    "rollup": "^1.29.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-sourcemaps": "^0.5.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "terser": "^4.6.2",
     "typescript": "~3.6.4"
   },
   "publishConfig": {
