--- a/packages/datastore/tsconfig.json
+++ b/packages/datastore/tsconfig.json
@@ -2,16 +2,21 @@
   "compilerOptions": {
     "composite": true,
     "declaration": true,
+    "declarationDir": "./types",
     "noImplicitAny": true,
     "noEmitOnError": true,
     "noUnusedLocals": true,
     "strictNullChecks": true,
-    "module": "commonjs",
+    "module": "ES6",
     "moduleResolution": "node",
     "target": "ES5",
     "outDir": "lib",
     "rootDir": "src",
-    "lib": ["dom", "es6"],
+    "lib": [
+      "dom",
+      "es6"
+    ],
+    "importHelpers": true,
     "types": []
   },
   "include": [
