--- a/packages/widgets/tsconfig.json
+++ b/packages/widgets/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "composite": true,
     "declaration": true,
+    "declarationDir": "./types",
     "noImplicitAny": true,
     "noEmitOnError": true,
     "noUnusedLocals": true,
     "strictNullChecks": true,
-    "module": "commonjs",
+    "module": "ES6",
     "moduleResolution": "node",
     "target": "ES5",
     "outDir": "lib",
@@ -17,6 +18,7 @@
       "ES2015.Iterable",
       "DOM"
     ],
+    "importHelpers": true,
     "types": [],
     "rootDir": "src"
   },
