chore(build): Added IIFE example (with IE compatibility)
Fixed sourceMap support
Include TS sources for sourceMap resolution
Replaced " with ' in all rollup.config.js instances

Signed-off-by: Gordon Smith <gordonjsmith@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,11 @@ script:
     set -e;
     pushd packages/widgets;
     yarn build;
+    yarn minimize;
     popd;
     yarn clean;
     yarn build;
+    yarn minimize;
     yarn build:test;
     yarn test;
     yarn docs;
