--- a/examples/example-dockpanel/package.json
+++ b/examples/example-dockpanel/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
     "rimraf": "^2.5.2",
+    "source-map-loader": "0.2.4",
     "style-loader": "^1.0.2",
     "typescript": "~3.6.4",
     "webpack": "^4.41.3",
