--- a/examples/example-dockpanel/tsconfig.json
+++ b/examples/example-dockpanel/tsconfig.json
@@ -5,6 +5,7 @@
     "noEmitOnError": true,
     "noUnusedLocals": true,
     "strictNullChecks": true,
+    "sourceMap": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "ES5",
