--- a/packages/dragdrop/tsconfig.json
+++ b/packages/dragdrop/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
     "composite": true,
+    "sourceMap": true,
     "declaration": true,
     "declarationDir": "./types",
+    "declarationMap": true,
     "noImplicitAny": true,
     "noEmitOnError": true,
     "noUnusedLocals": true,
