--- a/examples/example-dockpanel-amd/package.json
+++ b/examples/example-dockpanel-amd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/example-dockpanel-amd",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.0",
   "private": true,
   "scripts": {
     "test": "node ./test/runner.js"
