--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/application",
-  "version": "1.9.2",
+  "version": "1.10.0-alpha.0",
   "description": "Lumino Pluggable Application",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -43,15 +43,14 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/commands": "^1.10.3",
-    "@lumino/coreutils": "^1.4.3",
-    "@lumino/widgets": "^1.12.2"
+    "@lumino/commands": "^1.11.0-alpha.0",
+    "@lumino/coreutils": "^1.5.0-alpha.0",
+    "@lumino/widgets": "^1.13.0-alpha.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
-    "tslib": "1.10.0",
     "chai": "^3.5.0",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^2.0.0",
@@ -63,9 +62,10 @@
     "rimraf": "^2.5.2",
     "rollup": "^1.29.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "terser": "^4.6.2",
+    "tslib": "1.10.0",
     "typedoc": "~0.15.0",
     "typescript": "~3.6.4",
     "webpack": "^4.41.3",
