--- a/examples/example-datagrid/package.json
+++ b/examples/example-datagrid/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@lumino/example-datagrid",
-  "version": "0.4.2",
+  "version": "0.5.0-alpha.0",
   "private": true,
   "scripts": {
     "build": "tsc && webpack",
     "clean": "rimraf build"
   },
   "dependencies": {
-    "@lumino/datagrid": "^0.7.2",
-    "@lumino/default-theme": "^0.3.2",
-    "@lumino/dragdrop": "^1.5.3",
-    "@lumino/widgets": "^1.12.2",
+    "@lumino/datagrid": "^0.8.0-alpha.0",
+    "@lumino/default-theme": "^0.4.0-alpha.0",
+    "@lumino/dragdrop": "^1.6.0-alpha.0",
+    "@lumino/widgets": "^1.13.0-alpha.0",
     "es6-promise": "^4.0.5"
   },
   "devDependencies": {
