--- a/examples/example-datastore/package.json
+++ b/examples/example-datastore/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/example-datastore",
-  "version": "0.2.13",
+  "version": "0.3.0-alpha.0",
   "private": true,
   "scripts": {
     "build": "tsc && webpack",
@@ -8,13 +8,13 @@
     "start": "node build/server.js"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.2.3",
-    "@lumino/commands": "^1.10.3",
-    "@lumino/coreutils": "^1.4.3",
-    "@lumino/datastore": "^0.9.2",
-    "@lumino/disposable": "^1.3.6",
-    "@lumino/dragdrop": "^1.5.3",
-    "@lumino/widgets": "^1.12.2",
+    "@lumino/algorithm": "^1.3.0-alpha.0",
+    "@lumino/commands": "^1.11.0-alpha.0",
+    "@lumino/coreutils": "^1.5.0-alpha.0",
+    "@lumino/datastore": "^0.10.0-alpha.0",
+    "@lumino/disposable": "^1.4.0-alpha.0",
+    "@lumino/dragdrop": "^1.6.0-alpha.0",
+    "@lumino/widgets": "^1.13.0-alpha.0",
     "codemirror": "^5.48.2",
     "es6-promise": "^4.0.5",
     "websocket": "^1.0.28"
