--- a/examples/example-dockpanel/package.json
+++ b/examples/example-dockpanel/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@lumino/example-dockpanel",
-  "version": "0.2.2",
+  "version": "0.3.0-alpha.0",
   "private": true,
   "scripts": {
     "build": "tsc && webpack",
     "clean": "rimraf build"
   },
   "dependencies": {
-    "@lumino/commands": "^1.10.3",
-    "@lumino/default-theme": "^0.3.2",
-    "@lumino/dragdrop": "^1.5.3",
-    "@lumino/messaging": "^1.3.3",
-    "@lumino/widgets": "^1.12.2",
+    "@lumino/commands": "^1.11.0-alpha.0",
+    "@lumino/default-theme": "^0.4.0-alpha.0",
+    "@lumino/dragdrop": "^1.6.0-alpha.0",
+    "@lumino/messaging": "^1.4.0-alpha.0",
+    "@lumino/widgets": "^1.13.0-alpha.0",
     "es6-promise": "^4.0.5"
   },
   "devDependencies": {
