--- a/packages/algorithm/package.json
+++ b/packages/algorithm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/algorithm",
-  "version": "1.2.3",
+  "version": "1.3.0-alpha.0",
   "description": "Lumino Algorithms and Iterators",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -45,7 +45,6 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
     "@types/mocha": "^2.2.39",
-    "tslib": "1.10.0",
     "chai": "^3.5.0",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^2.0.0",
@@ -57,9 +56,10 @@
     "rimraf": "^2.5.2",
     "rollup": "^1.29.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "terser": "^4.6.2",
+    "tslib": "1.10.0",
     "typedoc": "~0.15.0",
     "typescript": "~3.6.4",
     "webpack": "^4.41.3",
