--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/datagrid",
-  "version": "0.7.2",
+  "version": "0.8.0-alpha.0",
   "description": "Lumino Tabular Data Grid",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -36,25 +36,25 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.2.3",
-    "@lumino/coreutils": "^1.4.3",
-    "@lumino/disposable": "^1.3.6",
-    "@lumino/domutils": "^1.1.7",
-    "@lumino/dragdrop": "^1.5.3",
-    "@lumino/keyboard": "^1.1.6",
-    "@lumino/messaging": "^1.3.3",
-    "@lumino/signaling": "^1.3.6",
-    "@lumino/widgets": "^1.12.2"
+    "@lumino/algorithm": "^1.3.0-alpha.0",
+    "@lumino/coreutils": "^1.5.0-alpha.0",
+    "@lumino/disposable": "^1.4.0-alpha.0",
+    "@lumino/domutils": "^1.2.0-alpha.0",
+    "@lumino/dragdrop": "^1.6.0-alpha.0",
+    "@lumino/keyboard": "^1.2.0-alpha.0",
+    "@lumino/messaging": "^1.4.0-alpha.0",
+    "@lumino/signaling": "^1.4.0-alpha.0",
+    "@lumino/widgets": "^1.13.0-alpha.0"
   },
   "devDependencies": {
-    "tslib": "1.10.0",
     "rimraf": "^2.5.2",
-    "typedoc": "~0.15.0",
     "rollup": "^1.29.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "terser": "^4.6.2",
+    "tslib": "1.10.0",
+    "typedoc": "~0.15.0",
     "typescript": "~3.6.4"
   },
   "publishConfig": {
