--- a/packages/datastore/package.json
+++ b/packages/datastore/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/datastore",
-  "version": "0.9.2",
+  "version": "0.10.0-alpha.0",
   "description": "Lumino DataStore",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -43,21 +43,21 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.2.3",
-    "@lumino/collections": "^1.2.3",
-    "@lumino/coreutils": "^1.4.3",
-    "@lumino/disposable": "^1.3.6",
-    "@lumino/messaging": "^1.3.3",
-    "@lumino/signaling": "^1.3.6"
+    "@lumino/algorithm": "^1.3.0-alpha.0",
+    "@lumino/collections": "^1.3.0-alpha.0",
+    "@lumino/coreutils": "^1.5.0-alpha.0",
+    "@lumino/disposable": "^1.4.0-alpha.0",
+    "@lumino/messaging": "^1.4.0-alpha.0",
+    "@lumino/signaling": "^1.4.0-alpha.0"
   },
   "devDependencies": {
-    "tslib": "1.10.0",
     "rimraf": "^2.5.2",
     "rollup": "^1.29.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "terser": "^4.6.2",
+    "tslib": "1.10.0",
     "typedoc": "~0.15.0",
     "typescript": "~3.6.4",
     "webpack-cli": "^3.3.10"
