--- a/packages/default-theme/package.json
+++ b/packages/default-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/default-theme",
-  "version": "0.3.2",
+  "version": "0.4.0-alpha.0",
   "description": "Lumino Default Theme",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -27,8 +27,8 @@
     "url": "https://github.com/jupyterlab/lumino.git"
   },
   "dependencies": {
-    "@lumino/dragdrop": "^1.5.3",
-    "@lumino/widgets": "^1.12.2"
+    "@lumino/dragdrop": "^1.6.0-alpha.0",
+    "@lumino/widgets": "^1.13.0-alpha.0"
   },
   "publishConfig": {
     "access": "public"
