--- a/packages/dragdrop/package.json
+++ b/packages/dragdrop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/dragdrop",
-  "version": "1.5.3",
+  "version": "1.6.0-alpha.0",
   "description": "Lumino Drag and Drop",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -45,14 +45,13 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/coreutils": "^1.4.3",
-    "@lumino/disposable": "^1.3.6"
+    "@lumino/coreutils": "^1.5.0-alpha.0",
+    "@lumino/disposable": "^1.4.0-alpha.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
-    "tslib": "1.10.0",
     "chai": "^3.5.0",
     "css-loader": "^3.4.0",
     "es6-promise": "^4.0.5",
@@ -66,11 +65,12 @@
     "rimraf": "^2.5.2",
     "rollup": "^1.29.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "terser": "^4.6.2",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "simulate-event": "^1.4.0",
     "style-loader": "^1.0.2",
+    "terser": "^4.6.2",
+    "tslib": "1.10.0",
     "typedoc": "~0.15.0",
     "typescript": "~3.6.4",
     "webpack": "^4.41.3",
