--- a/packages/polling/package.json
+++ b/packages/polling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/polling",
-  "version": "1.2.2",
+  "version": "1.3.0-alpha.0",
   "description": "Lumino Polling",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -43,16 +43,15 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/coreutils": "^1.4.3",
-    "@lumino/disposable": "^1.3.6",
-    "@lumino/signaling": "^1.3.6"
+    "@lumino/coreutils": "^1.5.0-alpha.0",
+    "@lumino/disposable": "^1.4.0-alpha.0",
+    "@lumino/signaling": "^1.4.0-alpha.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
     "@types/node": "^12.12.17",
-    "tslib": "1.10.0",
     "chai": "^3.5.0",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^2.0.0",
@@ -64,9 +63,10 @@
     "rimraf": "^2.5.2",
     "rollup": "^1.29.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "terser": "^4.6.2",
+    "tslib": "1.10.0",
     "typedoc": "~0.12.0",
     "typescript": "~3.6.4",
     "webpack": "^4.41.3",
