--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/widgets",
-  "version": "1.12.2",
+  "version": "1.13.0-alpha.0",
   "description": "Lumino Widgets",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -52,23 +52,22 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.2.3",
-    "@lumino/commands": "^1.10.3",
-    "@lumino/coreutils": "^1.4.3",
-    "@lumino/disposable": "^1.3.6",
-    "@lumino/domutils": "^1.1.7",
-    "@lumino/dragdrop": "^1.5.3",
-    "@lumino/keyboard": "^1.1.6",
-    "@lumino/messaging": "^1.3.3",
-    "@lumino/properties": "^1.1.6",
-    "@lumino/signaling": "^1.3.6",
-    "@lumino/virtualdom": "^1.6.1"
+    "@lumino/algorithm": "^1.3.0-alpha.0",
+    "@lumino/commands": "^1.11.0-alpha.0",
+    "@lumino/coreutils": "^1.5.0-alpha.0",
+    "@lumino/disposable": "^1.4.0-alpha.0",
+    "@lumino/domutils": "^1.2.0-alpha.0",
+    "@lumino/dragdrop": "^1.6.0-alpha.0",
+    "@lumino/keyboard": "^1.2.0-alpha.0",
+    "@lumino/messaging": "^1.4.0-alpha.0",
+    "@lumino/properties": "^1.2.0-alpha.0",
+    "@lumino/signaling": "^1.4.0-alpha.0",
+    "@lumino/virtualdom": "^1.7.0-alpha.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
     "@types/chai": "^3.4.35",
     "@types/mocha": "^2.2.39",
-    "tslib": "1.10.0",
     "chai": "^3.5.0",
     "css-loader": "^3.4.0",
     "es6-promise": "^4.0.5",
@@ -82,11 +81,12 @@
     "rimraf": "^2.5.2",
     "rollup": "^1.29.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "terser": "^4.6.2",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "simulate-event": "^1.4.0",
     "style-loader": "^1.0.2",
+    "terser": "^4.6.2",
+    "tslib": "1.10.0",
     "typedoc": "~0.15.0",
     "typescript": "~3.6.4",
     "webpack": "^4.41.3",
