--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/application",
-  "version": "1.10.0-alpha.0",
+  "version": "1.10.0",
   "description": "Lumino Pluggable Application",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -43,9 +43,9 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/commands": "^1.11.0-alpha.0",
-    "@lumino/coreutils": "^1.5.0-alpha.0",
-    "@lumino/widgets": "^1.13.0-alpha.0"
+    "@lumino/commands": "^1.11.0",
+    "@lumino/coreutils": "^1.5.0",
+    "@lumino/widgets": "^1.13.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
