--- a/packages/commands/package.json
+++ b/packages/commands/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/commands",
-  "version": "1.11.0-alpha.0",
+  "version": "1.11.0",
   "description": "Lumino Commands",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -50,13 +50,13 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.3.0-alpha.0",
-    "@lumino/coreutils": "^1.5.0-alpha.0",
-    "@lumino/disposable": "^1.4.0-alpha.0",
-    "@lumino/domutils": "^1.2.0-alpha.0",
-    "@lumino/keyboard": "^1.2.0-alpha.0",
-    "@lumino/signaling": "^1.4.0-alpha.0",
-    "@lumino/virtualdom": "^1.7.0-alpha.0"
+    "@lumino/algorithm": "^1.3.0",
+    "@lumino/coreutils": "^1.5.0",
+    "@lumino/disposable": "^1.4.0",
+    "@lumino/domutils": "^1.2.0",
+    "@lumino/keyboard": "^1.2.0",
+    "@lumino/signaling": "^1.4.0",
+    "@lumino/virtualdom": "^1.7.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
