--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/datagrid",
-  "version": "0.8.0-alpha.0",
+  "version": "0.8.0",
   "description": "Lumino Tabular Data Grid",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -36,15 +36,15 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.3.0-alpha.0",
-    "@lumino/coreutils": "^1.5.0-alpha.0",
-    "@lumino/disposable": "^1.4.0-alpha.0",
-    "@lumino/domutils": "^1.2.0-alpha.0",
-    "@lumino/dragdrop": "^1.6.0-alpha.0",
-    "@lumino/keyboard": "^1.2.0-alpha.0",
-    "@lumino/messaging": "^1.4.0-alpha.0",
-    "@lumino/signaling": "^1.4.0-alpha.0",
-    "@lumino/widgets": "^1.13.0-alpha.0"
+    "@lumino/algorithm": "^1.3.0",
+    "@lumino/coreutils": "^1.5.0",
+    "@lumino/disposable": "^1.4.0",
+    "@lumino/domutils": "^1.2.0",
+    "@lumino/dragdrop": "^1.6.0",
+    "@lumino/keyboard": "^1.2.0",
+    "@lumino/messaging": "^1.4.0",
+    "@lumino/signaling": "^1.4.0",
+    "@lumino/widgets": "^1.13.0"
   },
   "devDependencies": {
     "rimraf": "^2.5.2",
