--- a/packages/datastore/package.json
+++ b/packages/datastore/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/datastore",
-  "version": "0.10.0-alpha.0",
+  "version": "0.10.0",
   "description": "Lumino DataStore",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -43,12 +43,12 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.3.0-alpha.0",
-    "@lumino/collections": "^1.3.0-alpha.0",
-    "@lumino/coreutils": "^1.5.0-alpha.0",
-    "@lumino/disposable": "^1.4.0-alpha.0",
-    "@lumino/messaging": "^1.4.0-alpha.0",
-    "@lumino/signaling": "^1.4.0-alpha.0"
+    "@lumino/algorithm": "^1.3.0",
+    "@lumino/collections": "^1.3.0",
+    "@lumino/coreutils": "^1.5.0",
+    "@lumino/disposable": "^1.4.0",
+    "@lumino/messaging": "^1.4.0",
+    "@lumino/signaling": "^1.4.0"
   },
   "devDependencies": {
     "rimraf": "^2.5.2",
