--- a/packages/domutils/package.json
+++ b/packages/domutils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/domutils",
-  "version": "1.2.0-alpha.0",
+  "version": "1.2.0",
   "description": "Lumino DOM Utilities",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
