--- a/packages/dragdrop/package.json
+++ b/packages/dragdrop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/dragdrop",
-  "version": "1.6.0-alpha.0",
+  "version": "1.6.0",
   "description": "Lumino Drag and Drop",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -45,8 +45,8 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/coreutils": "^1.5.0-alpha.0",
-    "@lumino/disposable": "^1.4.0-alpha.0"
+    "@lumino/coreutils": "^1.5.0",
+    "@lumino/disposable": "^1.4.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
