--- a/packages/keyboard/package.json
+++ b/packages/keyboard/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/keyboard",
-  "version": "1.2.0-alpha.0",
+  "version": "1.2.0",
   "description": "Lumino Keyboard",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
