--- a/packages/polling/package.json
+++ b/packages/polling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/polling",
-  "version": "1.3.0-alpha.0",
+  "version": "1.3.0",
   "description": "Lumino Polling",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -43,9 +43,9 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/coreutils": "^1.5.0-alpha.0",
-    "@lumino/disposable": "^1.4.0-alpha.0",
-    "@lumino/signaling": "^1.4.0-alpha.0"
+    "@lumino/coreutils": "^1.5.0",
+    "@lumino/disposable": "^1.4.0",
+    "@lumino/signaling": "^1.4.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
