--- a/packages/signaling/package.json
+++ b/packages/signaling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/signaling",
-  "version": "1.4.0-alpha.0",
+  "version": "1.4.0",
   "description": "Lumino Signals and Slots",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -43,7 +43,7 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.3.0-alpha.0"
+    "@lumino/algorithm": "^1.3.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
