--- a/packages/virtualdom/package.json
+++ b/packages/virtualdom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/virtualdom",
-  "version": "1.7.0-alpha.0",
+  "version": "1.7.0",
   "description": "Lumino Virtual DOM",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -50,7 +50,7 @@
     "watch": "tsc --build --watch"
   },
   "dependencies": {
-    "@lumino/algorithm": "^1.3.0-alpha.0"
+    "@lumino/algorithm": "^1.3.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
