Set fail-fast to false

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,7 @@ jobs:
   test:
     name: JS
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
@@ -68,8 +69,12 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           set -eux
-          # e.g refs/head/foo or refs/tag/bar
-          export BRANCH=$(echo ${GITHUB_REF} | cut -d'/' -f 3)
+          if [ ! -z ${GITHUB_HEAD_REF} ]; then
+            export BRANCH=${GITHUB_HEAD_REF}
+          else
+            # e.g refs/head/foo or refs/tag/bar
+            export BRANCH=$(echo ${GITHUB_REF} | cut -d'/' -f 3)
+          fi
           git fetch origin $BRANCH
           git checkout $BRANCH
           npm install -g verdaccio
