--- a/packages/datastore/package.json
+++ b/packages/datastore/package.json
@@ -19,15 +19,16 @@
     "Vidar T. Fauske <vidartf@gmail.com>",
     "Ian Rose <ian.r.rose@gmail.com>"
   ],
+  "main": "dist/index.js",
+  "jsdelivr": "dist/index.min.js",
+  "unpkg": "dist/index.min.js",
+  "module": "dist/index.es6",
+  "types": "types/index.d.ts",
   "files": [
     "dist/*",
     "src/*",
     "types/*"
   ],
-  "main": "dist/index.js",
-  "unpkg": "dist/index.min.js",
-  "module": "dist/index.es6",
-  "types": "types/index.d.ts",
   "scripts": {
     "api": "api-extractor run --local --verbose",
     "build": "npm run build:src && rollup -c",
@@ -51,19 +52,18 @@
     "@lumino/signaling": "^1.7.0"
   },
   "devDependencies": {
-    "rimraf": "^2.5.2",
-    "rollup": "^2.22.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.56.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-sourcemaps": "^0.5.0",
-    "terser": "^4.6.2",
-    "tslib": "1.10.0",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "terser": "^5.7.1",
+    "tslib": "^2.3.0",
     "typedoc": "~0.15.0",
     "typescript": "~3.6.0",
     "webpack-cli": "^3.3.10"
   },
   "publishConfig": {
     "access": "public"
-  },
-  "jsdelivr": "dist/index.min.js"
+  }
 }
