--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "remove:dependency": "remove-dependency",
     "test": "lerna run test --scope \"@lumino/!(example-)*\"",
     "test:chrome": "lerna run test:chrome",
+    "test:chrome-headless": "lerna run test:chrome-headless",
     "test:examples": "lerna run test --scope \"@lumino/example-*\"",
     "test:firefox": "lerna run test:firefox",
     "test:firefox-headless": "lerna run test:firefox-headless",
